<resources>
    <string name="about">This system for HomeCoo hong ke intelligent technology (Shanghai) co., LTD is a new generation of intelligent household products tailored free APP, it USES the advanced Cloundlink P2P network transmission technology, remote monitoring, video calls, water and electricity coal leakage alarm and processing at the scene. Care for the safety of you and your family anytime and anywhere, let become so easy and simple life and work.</string>
    <string name="about_gviews">About</string>
    <string name="about_us">About Us</string>
    <string name="accept">Accept</string>
    <string name="accont_name_hint">UserID</string>
    <string name="account">Account</string>
    <string name="account_already_exists_in_mask_list">Shielding account already exists</string>
    <string name="account_email">E-mail</string>
    <string name="account_info">My Account</string>
    <string name="account_no_exist">Account does not exist</string>
    <string name="account_pwd_hint">Input password</string>
    <string name="add">Add</string>
    <string name="add_contact">Add new devices</string>
    <string name="add_contacts">Add new devices</string>
    <string name="add_contants_error">Add device failed </string>
    <string name="add_contants_success">Add device successfully</string>
    <string name="add_item_warm1">Can only add </string>
    <string name="add_item_warm2"> alarm account</string>
    <string name="add_more">Loading more</string>
    <string name="add_nearly_tell_error">Record failed</string>
    <string name="add_success">Add Successfully</string>
    <string name="added">Added</string>
    <string name="alarm_account">Alarm Account</string>
    <string name="alarm_control">Alarm Settings</string>
    <string name="alarm_email">Alarm push Email</string>
    <string name="alarm_histroy">records</string>
    <string name="alarm_id_must_first_with_zero">Alarm push  ID is your APP user ID</string>
    <string name="alarm_id_too_long">Alarm ID must be no more than 9 character</string>
    <string name="alarm_info">Alarm Info</string>
    <string name="alarm_manager">Alarm Management</string>
    <string name="alarm_mask">Blocking List</string>
    <string name="alarm_mask_id_too_long">Device ID length must be no more than 9 character</string>
    <string name="alarm_record">Device Alarm logs</string>
    <string name="alarm_time_interval">Alarm Interval(seconds)</string>
    <string name="all_tel">Device List</string>
    <string name="allarm">Alarm</string>
    <string name="Allarm_mute">Alarm Mute</string>
    <string name="allarm_record">Alarm Info</string>
    <string name="allarm_ring">Alarm Ring</string>
    <string name="allarm_robot">Device:</string>
    <string name="allarm_type">Type:</string>
    <string name="allarm_type1">External alarm</string>
    <string name="allarm_type2">Motion Detection</string>
    <string name="allarm_type3">Emergency alarm</string>
    <string name="Allarm_vibrate">Alarm Vibrate</string>
    <string name="already_init_passwd">Add Failed,the password already existed</string>
    <string name="app_name">HomeCoo Steward</string>
    <string name="are_you_sure_delete">Confirm to delete</string>
    <string name="area">Area</string>
    <string name="arrowhead" />
    <string name="audio_video_control">Media Settings</string>
    <string name="auto_start">Automatically Start</string>
    <string name="back">Back</string>
    <string name="balcony">Balcony</string>
    <string name="basic_Info">Basic Information</string>
    <string name="bedroom">Bedroom</string>
    <string name="before">Before</string>
    <string name="bell_ring">InComing Ring</string>
    <string name="bell_set">Ringtone</string>
    <string name="binding">Alarm push ID</string>
    <string name="busy">Target id is busy</string>
    <string name="button" />
    <string name="buzzer">Buzzer</string>
    <string name="buzzer_off">Buzzer Closed</string>
    <string name="buzzer_on">Buzzer Opened </string>
    <string name="buzzer_time">Buzzer Time(minute)</string>
    <string name="call">call</string>
    <string name="call_id_must_include_digit">Call ID must include digit</string>
    <string name="call_test">Calling Test</string>
    <string name="calling_from">Calling from</string>
    <string name="calling_to">Calling</string>
    <string name="callyou">Your friends will call you with it.</string>
    <string name="camara">Camera</string>
    <string name="camera_error">The camera break down,boot failed</string>
    <string name="can_update_in_sd">Can update from sd card</string>
    <string name="can_update_to">Can update to</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_shield">UnBlock</string>
    <string name="capture">Snapshot</string>
    <string name="capture_failed">Snapshot failed</string>
    <string name="capture_success">Snapshot OK</string>
    <string name="change">Change</string>
    <string name="change_email">Change Email</string>
    <string name="change_phone">Binding Phone</string>
    <string name="change_wifi">Change Wifi</string>
    <string name="channel">Channel</string>
    <string name="chat">Call</string>
    <string name="check">Check</string>
    <string name="check_device_update">Device Update</string>
    <string name="check_update">Check for upgrade</string>
    <string name="check_version">Upgrade</string>
    <string name="china">China</string>
    <string name="clear">Clear</string>
    <string name="clear_code">Clear</string>
    <string name="clear_code_prompt">Confirm to clear?</string>
    <string name="clear_confirm">Delete recent logs?</string>
    <string name="clear_success">Clear Successfully</string>
    <string name="clearing">Clearing...</string>
    <string name="click_refresh">Tap the screen to refresh</string>
    <string name="CNumber">Account ID</string>
    <string name="comming_mute">InComing Mute</string>
    <string name="comming_vibrate">InComing Vibrate</string>
    <string name="confirm">Ok</string>
    <string name="confirm_clear">Confirm to clear?</string>
    <string name="confirm_clear_chat">Confirm to clear?</string>
    <string name="confirm_delete">Confirm to delete?</string>
    <string name="confirm_exit">Exit apllication?</string>
    <string name="confirm_pwd">Input password again</string>
    <string name="conn_fail">Connect failed</string>
    <string name="connecting">Connecting</string>
    <string name="connecting_to">Connecting</string>
    <string name="contact_already_exist">Device already exists</string>
    <string name="contact_id">Device ID</string>
    <string name="contact_id_must_digit">Device ID length must be digital combination</string>
    <string name="contact_id_too_long">Device ID length must be no more than 9 character</string>
    <string name="contact_name">Device Name</string>
    <string name="contact_name_error">Please fill the device Name!</string>
    <string name="contact_number_error">Please fill the 3C Number!</string>
    <string name="contact_number_exist">Device already exists!</string>
    <string name="contact_pwd">Device Password</string>
    <string name="contact_pwd_must_digit">Device password must be digital combination and can not be \'0\' at the beginning</string>
    <string name="contact_pwd_too_long">Device password length must be no more than 10 character</string>
    <string name="contacts" />
    <string name="control">Setting</string>
    <string name="control_error">Only device can be controlled</string>
    <string name="courtyard">Courtyard</string>
    <string name="create_pwd">Please input device password</string>
    <string name="create_pwd_prompt">The password of the device is empty,please create a new password</string>
    <string name="ctl">control</string>
    <string name="current_version">CurVersion</string>
    <string name="current_version_is">Current version is</string>
    <string name="customize">Customize</string>
    <string name="day">Day</string>
    <string name="day_format" />
    <string name="day_h">d</string>
    <string name="defence">defence</string>
    <string name="defence_area_control">Defence Area</string>
    <string name="defence_off">Defence Off</string>
    <string name="defence_on">Defence On</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_alarm_id">Delete Alarm Id</string>
    <string name="delete_alarm_records">Delete Alarm Logs</string>
    <string name="delete_call_records">Delete Call Logs</string>
    <string name="delete_chat_records">Delete Chat Records</string>
    <string name="delete_confirm">Delete this item?</string>
    <string name="delete_contact">Delete Device</string>
    <string name="delete_from_list">Remove from list</string>
    <string name="delete_sys_messages">Delete System Messages</string>
    <string name="desc" />
    <string name="detail">detail</string>
    <string name="device">Add new devices</string>
    <string name="device_id_format_error">Device ID format error</string>
    <string name="device_info">Device Info</string>
    <string name="device_is_latest_version">The current version is the latest</string>
    <string name="device_pwd_format_error">Device password format error</string>
    <string name="device_pwd_must_be">(Device password can\'t be \'0\' at the beginning and Must be a number)</string>
    <string name="device_time">Date and Time</string>
    <string name="device_unsupport_defence_area">The current device does not support Defence Area</string>
    <string name="dialog_tip">Please dial a number</string>
    <string name="differentpassword">The password is Inconsistent</string>
    <string name="discover">Discover</string>
    <string name="door_lock">Door Lock</string>
    <string name="down_complete_click">Download is complete, Click Update.</string>
    <string name="down_device_update">Downloading...</string>
    <string name="input_email">Please enter your email</string>
    <string name="input_new_pwd">Please enter new password</string>
    <string name="input_old_pwd">Please enter original password</string>
    <string name="input_re_new_device_pwd">Please input password again</string>
    <string name="input_wifi_pwd">Please input WiFi password</string>
    <string name="modify_email">Modify Email</string>
    <string name="modify_login_password">Modify Login Pwd</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="video_mode_hd">HD</string>
    <string name="video_mode_ld">LD</string>
    <string name="video_mode_sd">SD</string>
    <string name="please_choose_wireless">Please connect your mobile phone to WIFI network first.</string>
    <string name="remind_align_camera">Place Smart Key facing to camera </string>
    <string name="listenning1">If you hear sound out from camera like "Ding",please tap "Heared"</string>
    <string name="listenning2">If you hear sound out from camera like "Bi-bi-bi",please tap "Go back" and re-enter device password</string>
    <string name="please_wait">Please wait…</string>
    <string name="hear">Heard</string>
    <string name="no_hear">Go back</string>
    <string name="qr_code_add_device">Smart Scan to add devices</string>
    <string name="qrccode_remind">Please place mobile phone 20 to 30 centimeters away from camera, let camera face the Smart Scan Code</string>
    <string name="qrccode_remind1">Wait util you hear a "Ding" sound.</string>
    <string name="help">help</string>
    <string name="intelligent_online">Smart Online</string>
    <string name="wait_di">If you do not hear the sound,please reset </string>
    <string name="connect_power_wait">Power on,wait for the connection sound from camera</string>
    <string name="connect_power">Connect to the power supply</string>
    <string name="camera_need_network">Wi-Fi camera to be connected</string>
</resources>