<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="320dp"
    android:layout_gravity="center"
    android:background="@drawable/remind"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/remind_align_camera"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_small" />
   <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:text="@string/listenning1"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_small"/>
   <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:text="@string/listenning2"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_small" />
    <ImageView
        android:id="@+id/img_insert"
        android:layout_width="260dp"
        android:layout_height="160dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img_align_infrared" />
    <ImageView
        android:id="@+id/anim_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_insert"
        android:layout_centerHorizontal="true"
        android:src="@drawable/animation_loading" />
    <TextView
        android:id="@+id/tv_wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/anim_load"
        android:text="@string/please_wait"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text_color_blue"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_hear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hear"
            android:textColor="@color/text_color_white"
            android:text="@string/hear" />

        <Button
            android:id="@+id/bt_no_hear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/hear"
            android:textColor="@color/text_color_white"
            android:text="@string/no_hear" />
    </LinearLayout>

</RelativeLayout>