<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_color" >

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/contact_bg_top"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/top_left_back_btn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/intelligent_online"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_wait_di"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_title"
        android:layout_marginTop="@dimen/item_group_margin_top"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_power"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_large" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/Alarm_Head_MarginTop"
            android:background="@drawable/connect_power" />

        <com.homecoolink.widget.XRTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="@dimen/item_group_margin_top"
            android:text="@string/connect_power_wait"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_normal" />

        <com.homecoolink.widget.XRTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/wait_di"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

    <Button
        android:id="@+id/next"
        style="@style/button_bottom_style"        
        android:text="@string/next" />

</RelativeLayout>