<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/control_top"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:layout_marginRight="@dimen/inner_margin_right"
    android:layout_marginTop="@dimen/p2p_control_bar_margin_top"
    android:background="@drawable/control_bar_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/video_mode_hd"
        android:layout_width="@dimen/p2p_control_top_item_width"
        android:layout_height="@dimen/p2p_control_top_item_height"
        android:background="@drawable/selector_play_back"
        android:gravity="center"
        android:text="@string/video_mode_hd"
        android:textColor="@color/text_color_white"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/video_mode_sd"
        android:layout_width="@dimen/p2p_control_top_item_width"
        android:layout_height="@dimen/p2p_control_top_item_height"
        android:background="@drawable/selector_play_back"
        android:gravity="center"
        android:text="@string/video_mode_sd"
        android:textColor="@color/text_color_white"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/video_mode_ld"
        android:layout_width="@dimen/p2p_control_top_item_width"
        android:layout_height="@dimen/p2p_control_top_item_height"
        android:background="@drawable/selector_play_back"
        android:gravity="center"
        android:text="@string/video_mode_ld"
        android:textColor="@color/text_color_blue"
        android:textSize="@dimen/text_size_small" />

</LinearLayout>