<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_color" >

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/contact_bg_top"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_back"
            style="@style/top_left_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/qr_code_add_device"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_help"
            style="@style/top_right_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <RelativeLayout
            android:id="@+id/layout_qrcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" >

            <ImageView
                android:id="@+id/img_qrcode"
                android:layout_width="@dimen/img_qr_code_width"
                android:layout_height="@dimen/img_qr_code_hegiht"
                android:layout_centerInParent="true"
                android:background="@drawable/qr_image_back" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_qrcode1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_qrcode"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/tv_magin_top"
            android:text="@string/qrccode_remind"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/tv_qrcode2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_qrcode1"
            android:layout_centerHorizontal="true"
            android:text="@string/qrccode_remind1"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_qrcode2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_hear"
                android:layout_width="@dimen/bt_listen_width"
                android:layout_height="@dimen/bt_listen_height"
                android:background="@drawable/sharecf_blue_btn_selector"
                android:text="@string/hear"
                android:textColor="@color/text_color_white" />

            
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>