<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/change_ui_hc"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/back_btn"
            style="@style/top_left_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/modify_login_password"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/save"
            style="@style/top_right_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginLeft="@dimen/item_left_right_margin"
        android:layout_marginRight="@dimen/item_left_right_margin"
        android:layout_marginTop="@dimen/item_group_margin_top"
        android:background="@drawable/corner_tiao_single_bg" >

        <EditText
            android:id="@+id/old_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/inner_margin_left"
            android:layout_marginRight="@dimen/inner_margin_right"
            android:background="#00000000"
            android:gravity="left|center_vertical"
            android:hint="@string/input_old_pwd"
            android:inputType="text"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_edit" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginLeft="@dimen/item_left_right_margin"
        android:layout_marginRight="@dimen/item_left_right_margin"
        android:layout_marginTop="@dimen/item_group_margin_top"
        android:background="@drawable/corner_tiao_single_bg" >

        <EditText
            android:id="@+id/new_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/inner_margin_left"
            android:layout_marginRight="@dimen/inner_margin_right"
            android:background="#00000000"
            android:gravity="left|center_vertical"
            android:hint="@string/input_new_pwd"
            android:inputType="text"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_edit" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginLeft="@dimen/item_left_right_margin"
        android:layout_marginRight="@dimen/item_left_right_margin"
        android:layout_marginTop="@dimen/item_group_margin_top"
        android:background="@drawable/corner_tiao_single_bg" >

        <EditText
            android:id="@+id/re_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/inner_margin_left"
            android:layout_marginRight="@dimen/inner_margin_right"
            android:background="#00000000"
            android:gravity="left|center_vertical"
            android:hint="@string/input_re_new_device_pwd"
            android:inputType="text"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_edit" />
    </RelativeLayout>

</LinearLayout>