<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/contact_bg_top"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/back_btn"
            style="@style/top_left_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/intelligent_online"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_left_right_margin"
            android:layout_marginRight="@dimen/item_left_right_margin"
            android:layout_marginTop="@dimen/item_group_margin_top"
            android:text="@string/camera_need_network"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_normal" />

        <RelativeLayout
            android:id="@+id/layout_ssid"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qr_code_edit_height"
            android:layout_marginLeft="@dimen/item_left_right_margin"
            android:layout_marginRight="@dimen/item_left_right_margin"
            android:layout_marginTop="@dimen/item_group_margin_top"
            android:background="@drawable/corner_tiao_single_bg" >

            <TextView
                android:id="@+id/tv_ssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/inner_margin_left"
                android:layout_marginRight="@dimen/inner_margin_right"
                android:background="#00000000"
                android:gravity="left|center_vertical"
                android:singleLine="true"
                android:text="@string/please_choose_wireless"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_edit" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qr_code_edit_height"
            android:layout_marginLeft="@dimen/item_left_right_margin"
            android:layout_marginRight="@dimen/item_left_right_margin"
            android:layout_marginTop="@dimen/item_group_margin_top"
            android:background="@drawable/corner_tiao_single_bg" 
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/edit_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/inner_margin_left"
                android:layout_marginRight="@dimen/inner_margin_right"
                android:background="#00000000"
                android:gravity="left|center_vertical"
                android:hint="@string/input_wifi_pwd"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/text_color_black"					               
                android:textSize="@dimen/text_size_edit" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/item_left_right_margin"
        android:layout_marginRight="@dimen/item_left_right_margin"
        android:layout_marginTop="@dimen/item_group_margin_top"
        android:orientation="vertical" >

        <Button
            android:id="@+id/next"
            style="@style/button_bottom_style"
            android:text="@string/next" />
    </RelativeLayout>

</LinearLayout>